--- a/slot-machine.html
+++ b/slot-machine.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-    <span id="reel1"></span>
-    <span id="reel2"></span>
-    <span id="reel3"></span>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <h1>Spice Spice Spice and Everything Nice</h1>
+  <section id = "container">
+ <section>
+ <span id="reel1"></span>
+ <span id="reel2"></span>
+ <span id="reel3"></span>
+ <span id="total"></span>
+ </section>
+  <button id="minBet">MIN BET</button>
+  <button id="maxBet">MAX BET</button>
+
+  <h2 id="finalResult">Result</h2>
+
+  <h2 id="response"> </h2>
+</section>
 
 
-<button id="wagerOne" type="button" name="button">WAGER 1</button>
-<button id="wagerTen" type="button" name="button">WAGER 10</button>
-<h2>PAYOUT: x25</h2>
-<h1 id="total">SCORE:</h1>
+  <script src="js/main.js" type="text/javascript"></script>
+</body>
 
-
-<script src="slot-machine.js" type="text/javascript">
-
-</script>
-  </body>
 </html>
