--- a/slot-machine.html
+++ b/slot-machine.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="slot-machine.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 </section>
 
 
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="slot-machine.js" type="text/javascript"></script>
 </body>
 
 </html>
