--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <h2 id="finalResult">Result</h2>
 
   <h2 id="response"> </h2>
-</section>
 
+</section>
+<img src="spicegirls.png" alt="Spice Girls">
 
   <script src="slot-machine.js" type="text/javascript"></script>
 </body>
